<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_gravity="center_horizontal"
        android:src="@drawable/grabfood"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/grab_food_logo" />


    <EditText
        android:id="@+id/edt_phone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_hint_enter_your_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="phone" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"
        android:hint="@string/edt_hint_enter_your_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />




    <Button
        android:id="@+id/btn_login"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/pink"
        android:text="@string/label_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:textColor="@color/white"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:text="@string/label_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/forgot_password"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>





</LinearLayout >